# GALTOSM

./: LICENSE  README.md
Artifact_GALTOSM/: README.txt
Artifact_GALTOSM/GALTOSM_tool/: README.txt
Artifact_GALTOSM/GALTOSM_tool/source_code/: README.txt
Artifact_GALTOSM/GALTOSM_tool/source_code/logic_translator_tool/: README.txt  logic_translator.py
Artifact_GALTOSM/GALTOSM_tool/source_code/model_translator_tool/: README.txt
Artifact_GALTOSM/GALTOSM_tool/source_code/model_translator_tool/adtmc_to_sdtmc-dev/: .gitignore  CMakeLists.txt  GENERATE_EXECUTABLE.sh  README.txt
Artifact_GALTOSM/GALTOSM_tool/source_code/model_translator_tool/adtmc_to_sdtmc-dev/.github/workflows/: cmake-multi-platform.yml
Artifact_GALTOSM/GALTOSM_tool/source_code/model_translator_tool/adtmc_to_sdtmc-dev/include/: aut.hpp
Artifact_GALTOSM/GALTOSM_tool/source_code/model_translator_tool/adtmc_to_sdtmc-dev/src/: aut.cpp  main.cpp
Artifact_GALTOSM/GALTOSM_tool/test_cases/: README.txt
Artifact_GALTOSM/GALTOSM_tool/test_cases/adtmc-mcrl2_to_sdtmc-prism/: airplane_ticket-10.aut  ant_on_grid_88.aut
Artifact_GALTOSM/GALTOSM_tool/test_cases/adtmc_to_sdtmc/: README.txt  ant16.aut  ant32.aut  ant64.aut  ant8.aut  bp_102.aut  bp_103.aut  brp_10_101.aut  brp_10_102.aut
Artifact_GALTOSM/case_studies/: README.txt
Artifact_GALTOSM/case_studies/CADP_case_studies/: README.txt
Artifact_GALTOSM/case_studies/CADP_case_studies/dice/: dice.lnt  (+1 more)
Artifact_GALTOSM/case_studies/reward_based_SDTMC/: README.txt
Sample_Artifact_GALTOSM/GALTOSM_tool/test_cases/: adtmc-mcrl2_to_sdtmc-prismdice.prism
(+89 files in other folders)
